--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,7 @@
 [submodule "auv_ws/src/darknet_ros"]
 	path = auv_ws/src/darknet_ros
 	url = https://github.com/leggedrobotics/darknet_ros.git
+[submodule "auv_ws/src/geometry2"]
+	path = auv_ws/src/geometry2
+	url = https://github.com/BadgerTechnologies/geometry2.git
+	branch = throttle-tf-repeated-data-error
